--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start" : "nodemon server/server.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
@@ -10,6 +11,8 @@
     "@babel/polyfill": "^7.4.4",
     "@mdi/font": "5.9.55",
     "core-js": "^3.8.3",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
     "roboto-fontface": "*",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
