--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start" : "nodemon server/server.js",
+    "start": "nodemon server/server.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "mysql2": "^2.3.3",
     "roboto-fontface": "*",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
