--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "nodemon server/server.js",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "prebuild": "rimraf dist/{js,css,fonts,img}",
+    "build": "cross-env VUE_ENV=client vue-cli-service build --no-clean && cross-env VUE_ENV=server vue-cli-service build --no-clean",
+    "postbuild": "rimraf dist/index.html"
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
@@ -13,18 +15,24 @@
     "core-js": "^3.8.3",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "mysql2": "^2.3.3",
     "roboto-fontface": "*",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-server-renderer": "^2.7.10",
     "vuetify": "^2.6.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-router-sync": "^5.0.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "cross-env": "^7.0.3",
+    "rimraf": "^3.0.2",
     "vue-cli-plugin-vuetify": "~2.5.5",
     "vue-template-compiler": "^2.6.14"
   }
