--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vue-server-renderer": "^2.7.10",
+    "vue-toastification": "^1.7.14",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2",
     "vuex-router-sync": "^5.0.0",
