--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mysql2": "^2.3.3",
     "roboto-fontface": "*",
     "vue": "^2.6.14",
+    "vue-progressbar": "^0.7.5",
     "vue-router": "^3.5.1",
     "vue-server-renderer": "^2.7.10",
     "vue-toastification": "^1.7.14",
