--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "nodemon server/server.js",
     "serve": "vue-cli-service serve",
-    "prebuild": "rimraf dist/{js,css,fonts,img}",
     "build": "cross-env VUE_ENV=client vue-cli-service build --no-clean && cross-env VUE_ENV=server vue-cli-service build --no-clean",
-    "postbuild": "rimraf dist/index.html"
+    "postbuild": "rimraf dist/index.html",
+    "prebuild": "rimraf dist/{js,css,fonts,img}",
+    "start": "nodemon server/server.js"
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
@@ -33,8 +33,10 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "axios": "^0.18.0",
     "cross-env": "^7.0.3",
     "rimraf": "^3.0.2",
+    "vue-cli-plugin-axios": "~0.0.4",
     "vue-cli-plugin-vuetify": "~2.5.5",
     "vue-template-compiler": "^2.6.14"
   }
